# firestorm-simd-fun

./: .gitignore  Benchmark.cpp  Benchmark.h  CMakeLists.txt  README.md  main.cpp  minmax.cpp  minmax.h
cmake/: FindAVX.cmake
